--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">GitHub Repos</string>
-    <string name="base_url">https://api.github.com/</string>
+    <string name="base_url" translatable="false">https://api.github.com/</string>
+    <string name="forks_number">Forks: %d</string>
 </resources>
