--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="forks_number">Forks: %d</string>
     <string name="search">Search repository</string>
     <string name="loading">Loading..</string>
+    <string name="noData">No result for your search</string>
+    <string name="error_no_internet">No internet connection</string>
+    <string name="generic_error">Something went wrong.\nPlease try again later</string>
+    <string name="enterQuery">Type repository name above</string>
 </resources>
